tests/errors/syn_err10.kt
// incomplete expression error
val b = 5 +